<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.ActivityLoginAvatar">

    <TextView
        android:id="@+id/t_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/ActivityLogin_avatar"
        android:textColor="@color/firsttextcolor"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/i_avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003" />

    <TextView
        android:id="@+id/t_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActivityLogin_choose_avatar"
        app:layout_constraintBottom_toTopOf="@id/i_avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_title"/>

    <ImageView
        android:id="@+id/i_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/choose_avatar_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/i_cameraIconFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camera_icon_fill"
        app:layout_constraintBottom_toBottomOf="@id/i_avatar"
        app:layout_constraintLeft_toLeftOf="@+id/i_avatar"
        app:layout_constraintRight_toRightOf="@+id/i_avatar"
        app:layout_constraintTop_toTopOf="@id/i_avatar"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/t_editProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_semi_bold"
        android:text="@string/ActivityLogin_edit_profile_image"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/i_avatar"
        app:layout_constraintLeft_toLeftOf="@id/i_avatar"
        app:layout_constraintRight_toRightOf="@id/i_avatar"
        app:layout_constraintTop_toBottomOf="@+id/i_cameraIconFill"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/t_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_in_background"
        android:fontFamily="@font/quicksand_semi_bold"
        android:gravity="center"
        android:text="@string/button_continue"
        android:textColor="@color/textwhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_avatar"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/t_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:textSize="14sp"
        android:textColor="@color/secondtextcolor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_continue"
        app:layout_constraintBottom_toTopOf="@+id/t_tryLater"
        android:text="@string/ActivityLogin_or"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="@+id/t_continue"
        app:layout_constraintRight_toLeftOf="@+id/t_or"
        android:layout_marginHorizontal="10dp"
        android:background="@color/secondtextcolor"
        app:layout_constraintTop_toTopOf="@+id/t_or"
        app:layout_constraintBottom_toBottomOf="@+id/t_or"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintLeft_toRightOf="@+id/t_or"
        app:layout_constraintRight_toRightOf="@+id/t_continue"
        android:layout_marginHorizontal="10dp"
        android:background="@color/secondtextcolor"
        app:layout_constraintTop_toTopOf="@+id/t_or"
        app:layout_constraintBottom_toBottomOf="@+id/t_or"/>

    <TextView
        android:id="@+id/t_tryLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActivityLogin_do_this_later"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_semi_bold"
        android:textColor="@color/textyellow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_continue"/>

</androidx.constraintlayout.widget.ConstraintLayout>