<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/i_bottom"/>

    <ImageView
        android:id="@+id/i_bottom"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bottom"/>

    <ImageView
        android:id="@+id/i_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <ImageView
        android:id="@+id/i_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home"
        app:layout_constraintRight_toLeftOf="@+id/i_social"
        app:layout_constraintTop_toTopOf="@+id/i_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/t_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu1"
        android:textColor="@color/secondtextcolor"
        android:fontFamily="@font/quicksand_regular"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/i_home"
        app:layout_constraintRight_toRightOf="@+id/i_home"
        app:layout_constraintTop_toBottomOf="@+id/i_home"/>

    <ImageView
        android:id="@+id/i_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/social"
        app:layout_constraintTop_toTopOf="@+id/i_home"
        app:layout_constraintBottom_toBottomOf="@+id/i_home"
        app:layout_constraintLeft_toRightOf="@+id/i_home"
        app:layout_constraintRight_toLeftOf="@+id/i_add" />

    <TextView
        android:id="@+id/t_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu2"
        android:textColor="@color/secondtextcolor"
        android:fontFamily="@font/quicksand_regular"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/t_home"
        app:layout_constraintLeft_toLeftOf="@+id/i_social"
        app:layout_constraintRight_toRightOf="@+id/i_social"
        app:layout_constraintTop_toBottomOf="@+id/i_social"/>

    <ImageView
        android:id="@+id/i_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/i_add"
        app:layout_constraintTop_toTopOf="@+id/i_home"
        app:layout_constraintRight_toLeftOf="@+id/i_profile"
        android:src="@drawable/likes"/>

    <TextView
        android:id="@+id/t_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu3"
        android:textColor="@color/secondtextcolor"
        android:fontFamily="@font/quicksand_regular"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/t_home"
        app:layout_constraintLeft_toLeftOf="@+id/i_likes"
        app:layout_constraintRight_toRightOf="@+id/i_likes"
        app:layout_constraintTop_toBottomOf="@+id/i_likes"/>

    <ImageView
        android:id="@+id/i_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@+id/t_me"
        app:layout_constraintLeft_toRightOf="@+id/i_likes"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/t_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu4"
        android:textColor="@color/secondtextcolor"
        android:fontFamily="@font/quicksand_regular"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/i_profile"
        app:layout_constraintRight_toRightOf="@+id/i_profile"
        app:layout_constraintBottom_toBottomOf="@+id/t_home"/>



</androidx.constraintlayout.widget.ConstraintLayout>